index: added content to header & main. style: added rules to header & main.

--- a/index.html
+++ b/index.html
@@ -1,90 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="css/style.css">
     <title>Zoom</title>
 </head>
+
 <body>
     <!-- header -->
     <header>
         <!-- blocco modalità visualizzazione -->
         <div class="view-mode">
-
+            <span>
+                <i class="fa-solid fa-table-cells"></i> Speaker View
+            </span>
+            <span>
+                <i class="fa-solid fa-maximize"></i>
+            </span>
         </div>
         <!-- /blocco modalità visualizzazione -->
     </header>
     <!-- /header -->
 
     <!-- corpo centrale -->
-    <main>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
-        <div class="user-webcam"></div>
+    <main class="flex-container-wrap">
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <p><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</p>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+        <div class="user-webcam">
+            <img src="img/webcam.png" alt="Webcam utente">
+            <div class="user-name">
+                <span><i class="fa-solid fa-microphone-slash"></i> Pinco Pallo</span>
+            </div>
+        </div>
+
     </main>
     <!-- /corpo centrale -->
 
     <!-- footer -->
-    <footer>        
-            <!-- blocco sinistro -->
-            <div class="left-block">
+    <footer>
+        <!-- blocco sinistro -->
+        <div class="left-block">
 
-            </div>
-            <!-- /blocco sinistro -->
+        </div>
+        <!-- /blocco sinistro -->
 
-            <!-- barra di navigazione centrale -->
-            <nav>
+        <!-- barra di navigazione centrale -->
+        <nav>
 
-            </nav>
-            <!-- /barra di navigazione centrale -->
+        </nav>
+        <!-- /barra di navigazione centrale -->
 
-            <!-- blocco destro -->
-            <div class="right-block">
+        <!-- blocco destro -->
+        <div class="right-block">
 
-            </div>
-            <!-- /blocco destro -->        
+        </div>
+        <!-- /blocco destro -->
     </footer>
     <!-- /footer -->
 </body>
+
 </html>
