--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="user-webcam">
             <img src="img/webcam.png" alt="Webcam utente">
             <div class="user-name">
-                <p><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</p>
+                <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallo</span>
             </div>
         </div>
         <div class="user-webcam">
@@ -247,20 +247,97 @@
     <!-- footer -->
     <footer>
         <!-- blocco sinistro -->
-        <div class="left-block">
-
+        <div class="left-footer left">
+            <div class="footer-block">
+                <div class="icon">
+                    <i class="fa-solid fa-microphone"></i>
+                </div>
+                <div class="text">Mute</div>
+            </div>
+            <div class="footer-block">
+                <div class="icon">
+                    <i class="fa-solid fa-angle-up"></i>
+                </div>
+            </div>
+            <div class="footer-block">
+                <div class="icon">
+                    <i class="fa-solid fa-video"></i>
+                </div>
+                <div class="text">Stop Video</div>
+            </div>
+            <div class="footer-block">
+                <div class="icon">
+                    <i class="fa-solid fa-angle-up"></i>
+                </div>
+            </div>
         </div>
         <!-- /blocco sinistro -->
 
         <!-- barra di navigazione centrale -->
-        <nav>
-
+        <nav class="center-footer center">
+            <div class="footer-block">
+                <div class="icon">
+                    <i class="fa-solid fa-user-plus"></i>
+                </div>
+                <div class="text">Invite</div>
+            </div>
+            <div class="footer-block">
+                <div class="icon">
+                    <i class="fa-solid fa-user-group"></i>
+                </div>
+                <div class="text">Manage Participants</div>
+            </div>
+            <div class="footer-block">
+                <div class="icon">
+                    <i class="fa-solid fa-chart-column"></i>
+                </div>
+                <div class="text">Polling</div>
+            </div>
+            <div class="footer-block">
+                <div class="icon">
+                    <i class="fa-solid fa-share-from-square"></i>
+                </div>
+                <div class="text">Share Screen</div>
+            </div>
+            <div class="footer-block">
+                <div class="icon">
+                    <i class="fa-solid fa-angle-up"></i>
+                </div>
+            </div>
+            <div class="footer-block">
+                <div class="icon">
+                    <i class="fa-solid fa-comment"></i>
+                </div>
+                <div class="text">Chat</div>
+            </div>
+            <div class="footer-block">
+                <div class="icon">
+                    <i class="fa-solid fa-record-vinyl"></i>
+                </div>
+                <div class="text">Record</div>
+            </div>
+            <div class="footer-block">
+                <div class="icon">
+                    <i class="fa-solid fa-cube"></i>
+                </div>
+                <div class="text">Breakout Rooms</div>
+            </div>
+            <div class="footer-block">
+                <div class="icon">
+                    <i class="fa-solid fa-ellipsis"></i>
+                </div>
+                <div class="text">More</div>
+            </div>
         </nav>
         <!-- /barra di navigazione centrale -->
 
         <!-- blocco destro -->
-        <div class="right-block">
-
+        <div class="right-footer right">
+            <div class="footer-block">
+                <button>
+                    End meeting
+                </button>
+            </div>
         </div>
         <!-- /blocco destro -->
     </footer>
