index & style : added mouse:hover and mouse:active to some  footer elements.

--- a/index.html
+++ b/index.html
@@ -276,8 +276,22 @@
         <!-- barra di navigazione centrale -->
         <nav class="center-footer center">
             <div class="footer-block">
-                <div class="icon">
+                <div id="invite" class="icon">
                     <i class="fa-solid fa-user-plus"></i>
+                </div>
+                <div class="hidden-invite">
+                    <span>
+                        <i class="fa-solid fa-cat"></i> Ugo
+                    </span>
+                    <span>
+                        <i class="fa-solid fa-cat"></i> Briciola
+                    </span>
+                    <span>
+                        <i class="fa-solid fa-cat"></i> Ettore
+                    </span>
+                    <span>
+                        <i class="fa-solid fa-cat"></i> Agamennone
+                    </span>
                 </div>
                 <div class="text">Invite</div>
             </div>
@@ -337,6 +351,11 @@
                 <button>
                     End meeting
                 </button>
+                <div class="hidden-button">
+                    <div class="close">
+                        <a href="">Closing... <i class="fa-solid fa-hourglass-end"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- /blocco destro -->
